force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>Object Label name Change as per Onshore mail.</description>
    <label>Contract &amp; Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract &amp; Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts &amp; Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>