force-app/main/default/objects/Contract__c/fields/Account_Registry_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Registry_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account Registry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>