force-app/main/default/objects/Contract__c/fields/Actual_Revenue_Middle_East__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Middle_East__c</fullName>
    <label>Actual Revenue (Middle East)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>