force-app/main/default/objects/Contract__c/fields/Actual_Revenue_SE_Asia__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_SE_Asia__c</fullName>
    <label>Actual Revenue (SE Asia)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>