force-app/main/default/objects/Contract__c/fields/Additional_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Change_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to display the selection made at the proposal level. This cannot be updated at the Contract level.</inlineHelpText>
    <label>Additional Change Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>