force-app/main/default/objects/Contract__c/fields/Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>