force-app/main/default/objects/Contract__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this field to capture the email of the TMC&apos;s agent.This email will appear on the proposal/contract.</inlineHelpText>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>