force-app/main/default/objects/Contract__c/fields/Agent_Fax__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>