force-app/main/default/objects/Contract__c/fields/Agent_Group_s_Marketed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Agent_Group_s_Marketed_Revenue__c</fullName>
    <label>Agent Group&apos;s Marketed Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>