force-app/main/default/objects/Contract__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this field to capture the name of the TMC&apos;s agent.This name will appear on the proposal/contract.</inlineHelpText>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>