force-app/main/default/objects/Contract__c/fields/Agent_Override__c.field-meta.xml
<CustomField>
    <fullName>Agent_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quest&apos;s Account Classifications</description>
    <label>Agent Override</label>
    <type>Checkbox</type>
</CustomField>