force-app/main/default/objects/Contract__c/fields/Agent_Override_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Override_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Override End Date</label>
    <type>Date</type>
</CustomField>