force-app/main/default/objects/Contract__c/fields/Agreement_Title__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Title__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Title of the agreement</inlineHelpText>
    <label>Agreement Title</label>
    <type>TextArea</type>
</CustomField>