force-app/main/default/objects/Contract__c/fields/Amendments__c.field-meta.xml
<CustomField>
    <fullName>Amendments__c</fullName>
    <label>Amendments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Change to discount</fullName>
            </value>
            <value>
                <fullName>Incentive Fares</fullName>
            </value>
            <value>
                <fullName>Route Deal</fullName>
            </value>
            <value>
                <fullName>Fixed Fares</fullName>
            </value>
            <value>
                <fullName>Advance res/Ticketing</fullName>
            </value>
            <value>
                <fullName>Penalties</fullName>
            </value>
            <value>
                <fullName>Excess Baggage</fullName>
            </value>
            <value>
                <fullName>AA ticket stock</fullName>
            </value>
            <value>
                <fullName>All Discounts</fullName>
            </value>
            <value>
                <fullName>China</fullName>
                <isActive>false</isActive>
                <label>China</label>
            </value>
            <value>
                <fullName>EK ticket stock</fullName>
                <isActive>false</isActive>
                <label>EK ticket stock</label>
            </value>
            <value>
                <fullName>Europe</fullName>
                <isActive>false</isActive>
                <label>Europe</label>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
                <isActive>false</isActive>
                <label>Hong Kong</label>
            </value>
            <value>
                <fullName>India</fullName>
                <isActive>false</isActive>
                <label>India</label>
            </value>
            <value>
                <fullName>Indonesia</fullName>
                <isActive>false</isActive>
                <label>Indonesia</label>
            </value>
            <value>
                <fullName>Japan</fullName>
                <isActive>false</isActive>
                <label>Japan</label>
            </value>
            <value>
                <fullName>Korea</fullName>
                <isActive>false</isActive>
                <label>Korea</label>
            </value>
            <value>
                <fullName>Malaysia</fullName>
                <isActive>false</isActive>
                <label>Malaysia</label>
            </value>
            <value>
                <fullName>Middle East</fullName>
                <isActive>false</isActive>
                <label>Middle East</label>
            </value>
            <value>
                <fullName>New Zealand</fullName>
                <isActive>false</isActive>
                <label>New Zealand</label>
            </value>
            <value>
                <fullName>North Africa</fullName>
                <isActive>false</isActive>
                <label>North Africa</label>
            </value>
            <value>
                <fullName>North America</fullName>
                <isActive>false</isActive>
                <label>North America</label>
            </value>
            <value>
                <fullName>Papua New Guinea</fullName>
                <isActive>false</isActive>
                <label>Papua New Guinea</label>
            </value>
            <value>
                <fullName>Philippines</fullName>
                <isActive>false</isActive>
                <label>Philippines</label>
            </value>
            <value>
                <fullName>Singapore</fullName>
                <isActive>false</isActive>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>South Africa</fullName>
                <isActive>false</isActive>
                <label>South Africa</label>
            </value>
            <value>
                <fullName>South America</fullName>
                <isActive>false</isActive>
                <label>South America</label>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
                <isActive>false</isActive>
                <label>Sri Lanka</label>
            </value>
            <value>
                <fullName>Taiwan</fullName>
                <isActive>false</isActive>
                <label>Taiwan</label>
            </value>
            <value>
                <fullName>Thailand</fullName>
                <isActive>false</isActive>
                <label>Thailand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>