force-app/main/default/objects/Contract__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <label>Performance Bonus Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>