force-app/main/default/objects/Contract__c/fields/Approval_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this to capture the date when the contract was submitted to the Legal Team for approval.</inlineHelpText>
    <label>Approval Submission Date</label>
    <type>Date</type>
</CustomField>