force-app/main/default/objects/Contract__c/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this to capture the date when the contract is approved or rejected by the Legal Team.</inlineHelpText>
    <label>Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>