force-app/main/default/objects/Contract__c/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <formula>TEXT(Account__r.BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country Code</label>
    <type>Text</type>
</CustomField>