force-app/main/default/objects/Contract__c/fields/Billing_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Address__c</fullName>
    <formula>IF(ISBLANK(Account__r.BillingStreet),&quot;&quot;, (Account__r.BillingStreet &amp;&quot;, &quot; ) ) 
&amp; IF(ISBLANK(Account__r.BillingCity),&quot;&quot;, (Account__r.BillingCity&amp;&quot;, &quot;) ) 
&amp; IF(ISBLANK(Account__r.BillingState),&quot;&quot;, (Account__r.BillingState &amp;&quot;, &quot;) ) 
&amp; IF(ISBLANK(Account__r.BillingPostalCode),&quot;&quot;, (Account__r.BillingPostalCode&amp;&quot;, &quot;) ) 
&amp;Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing To Address</label>
    <type>Text</type>
</CustomField>