force-app/main/default/objects/Contract__c/fields/Changes_in_Legal_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>Changes_in_Legal_T_Cs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be used to capture details about changes required in legal T&amp;Cs.</inlineHelpText>
    <label>Changes in Legal T&amp;Cs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>