force-app/main/default/objects/Contract__c/fields/Charter_Flown_Date__c.field-meta.xml
<CustomField>
    <fullName>Charter_Flown_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Charter Flown Date</label>
    <type>Date</type>
</CustomField>