force-app/main/default/objects/Contract__c/fields/Charter_Price__c.field-meta.xml
<CustomField>
    <fullName>Charter_Price__c</fullName>
    <formula>Proposal__r.Charter_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charter Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>