force-app/main/default/objects/Contract__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Loyalty commercial field used when Contract Variation Reason picklist is selected as &quot;Other&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional comments or information around this agreement</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>