force-app/main/default/objects/Contract__c/fields/Concatenated_Fax__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Fax__c</fullName>
    <formula>Account__r.Concatenated_Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenated Fax</label>
    <type>Text</type>
</CustomField>