force-app/main/default/objects/Contract__c/fields/Condition_based_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Condition_based_Contact_Name__c</fullName>
    <formula>IF(ISBLANK(Proposal__r.Preferred_Name__c), Contact__r.FirstName  , Proposal__r.Preferred_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition based Contact Name</label>
    <type>Text</type>
</CustomField>