force-app/main/default/objects/Contract__c/fields/Conga_Trigger_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Trigger_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conga Trigger URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>