force-app/main/default/objects/Contract__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>