force-app/main/default/objects/Contract__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <formula>Contact__r.Job_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>