force-app/main/default/objects/Contract__c/fields/Contract_Age__c.field-meta.xml
<CustomField>
    <fullName>Contract_Age__c</fullName>
    <formula>TODAY () -  DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>