force-app/main/default/objects/Contract__c/fields/Contract_Agreement_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement_Unique_ID__c</fullName>
    <description>CRM-5511: To convert the 15 digit ID to 18 digit ID for data loader purpose.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract &amp; Agreement Unique ID</label>
    <type>Text</type>
</CustomField>