force-app/main/default/objects/Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this to capture the end date for the contract</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>