force-app/main/default/objects/Contract__c/fields/Contract_Expiry_year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_year__c</fullName>
    <formula>TEXT(YEAR(Contract_End_Date__c))</formula>
    <label>Contract Expiry Year</label>
    <type>Text</type>
</CustomField>