force-app/main/default/objects/Contract__c/fields/Contract_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extension_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Extension Date</label>
    <type>Date</type>
</CustomField>