force-app/main/default/objects/Contract__c/fields/Contract_Not_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Not_Signed__c</fullName>
    <description>Contract that hasn&apos;t been signed by Customer and Contract has already started</description>
    <formula>IF ( AND (  Contract_Start_Date__c &lt; Today (), ISPICKVAL (  Status__c , &quot;Signature Required by Customer&quot;)),1,0)</formula>
    <label>Contract Not Signed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>