force-app/main/default/objects/Contract__c/fields/Contract_Recipient_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Contract_Recipient_Name_f__c</fullName>
    <formula>Contact__r.FirstName &amp;&apos; &apos;&amp;Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Recipient Name</label>
    <type>Text</type>
</CustomField>