force-app/main/default/objects/Contract__c/fields/Contract_Region__c.field-meta.xml
<CustomField>
    <fullName>Contract_Region__c</fullName>
    <label>Contract Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU/NZ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>