force-app/main/default/objects/Contract__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please use this to capture the start date for the contract</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>