force-app/main/default/objects/Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>National Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Wholesale Sales Agreements</fullName>
            </value>
            <value>
                <fullName>Wholesale Fares Only Agreement</fullName>
            </value>
            <value>
                <fullName>Qantas Channel Incentive</fullName>
            </value>
            <value>
                <fullName>Qantas Channel Tech Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>