force-app/main/default/objects/Contract__c/fields/Contract_Variation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Variation_Reason__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Why is this variation occurring?</inlineHelpText>
    <label>Contract Variation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Amendment + Extension</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>