force-app/main/default/objects/Contract__c/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted [System]</label>
    <type>Checkbox</type>
</CustomField>