force-app/main/default/objects/Contract__c/fields/Deal_Sheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Sheet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>