force-app/main/default/objects/Contract__c/fields/Departure_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure End Date</label>
    <type>Date</type>
</CustomField>