force-app/main/default/objects/Contract__c/fields/Domestic_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Amendment__c</fullName>
    <label>Domestic Amendment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Discounts</fullName>
            </value>
            <value>
                <fullName>Advance res/Ticketing</fullName>
            </value>
            <value>
                <fullName>Block fares</fullName>
            </value>
            <value>
                <fullName>Domestic discount</fullName>
            </value>
            <value>
                <fullName>Excess Baggage</fullName>
            </value>
            <value>
                <fullName>Fixed Fares</fullName>
            </value>
            <value>
                <fullName>Incentive Fares</fullName>
            </value>
            <value>
                <fullName>No Change to discount</fullName>
            </value>
            <value>
                <fullName>Penalties</fullName>
            </value>
            <value>
                <fullName>Route Deal</fullName>
            </value>
            <value>
                <fullName>JQ Inclusion</fullName>
            </value>
            <value>
                <fullName>Non-Tier to Tier 1</fullName>
            </value>
            <value>
                <fullName>Non-Tier to Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 1 to Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 2 to Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 1 to Non-Tier</fullName>
            </value>
            <value>
                <fullName>Tier 2 to Non-Tier</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>