force-app/main/default/objects/Contract__c/fields/Domestic_Annual_Share__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Annual_Share__c</fullName>
    <label>Forecast QF Share (Dom)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>