force-app/main/default/objects/Contract__c/fields/Effective_From_Conga__c.field-meta.xml
<CustomField>
    <fullName>Effective_From_Conga__c</fullName>
    <formula>IF( ISBLANK(QEC_Variation_Start_Date__c),  Contract_Start_Date__c , QEC_Variation_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective From Conga</label>
    <type>Date</type>
</CustomField>