force-app/main/default/objects/Contract__c/fields/Eligible_for_EK_ticket_stock__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_EK_ticket_stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <label>EK joint customer</label>
    <type>Checkbox</type>
</CustomField>