force-app/main/default/objects/Contract__c/fields/Exceeds_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Threshold__c</fullName>
    <formula>TEXT(Proposal__r.Exceeds_Threshold__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceeds Threshold</label>
    <type>Text</type>
</CustomField>