force-app/main/default/objects/Contract__c/fields/Extended__c.field-meta.xml
<CustomField>
    <fullName>Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate whether the contract is extended or not</description>
    <label>Extended</label>
    <type>Checkbox</type>
</CustomField>