force-app/main/default/objects/Contract__c/fields/Farthest_Signed_Contract_End_Date_check__c.field-meta.xml
<CustomField>
    <fullName>Farthest_Signed_Contract_End_Date_check__c</fullName>
    <formula>IF(Account__r.Contracted__c = TRUE &amp;&amp; Account__r.Contract_Expiry_Date__c = Contract_End_Date__c, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farthest Signed Contract End Date check</label>
    <type>Checkbox</type>
</CustomField>