force-app/main/default/objects/Contract__c/fields/Forecast_Charter_Spend__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Charter_Spend__c</fullName>
    <label>Forecast Charter Spend [EXCL GST]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>