force-app/main/default/objects/Contract__c/fields/Forecast_Flight_Share_International_US__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Flight_Share_International_US__c</fullName>
    <formula>Opportunity__r.Forecast_Flight_Share_International__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Flight Share (International)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>