force-app/main/default/objects/Contract__c/fields/Frequent_Flyer_Status_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Status_Upgrade__c</fullName>
    <inlineHelpText>Used to display if Frequent Flyer Upgrade was flagged at the Proposal level.</inlineHelpText>
    <label>Frequent Flyer Status Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>