force-app/main/default/objects/Contract__c/fields/Frequent_Flyer_Status_Upgrade_Offer__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Status_Upgrade_Offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to display the Frequent Flyer Status Upgrade Offer that was specified at the Proposal level.</inlineHelpText>
    <label>Frequent Flyer Status Upgrade Offer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>