force-app/main/default/objects/Contract__c/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <label>General</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Code update</fullName>
            </value>
            <value>
                <fullName>Account Name Change</fullName>
            </value>
            <value>
                <fullName>Deal Extension</fullName>
            </value>
            <value>
                <fullName>Deal Termination</fullName>
            </value>
            <value>
                <fullName>Groups allowed</fullName>
            </value>
            <value>
                <fullName>PCC update</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
            <value>
                <fullName>W Class</fullName>
            </value>
            <value>
                <fullName>New Deal Tier 1</fullName>
            </value>
            <value>
                <fullName>New Deal Tier 2</fullName>
            </value>
            <value>
                <fullName>New Deal Non-Tiered</fullName>
            </value>
            <value>
                <fullName>Change of QCI</fullName>
            </value>
            <value>
                <fullName>Deal Ended</fullName>
                <isActive>false</isActive>
                <label>Deal Ended</label>
            </value>
            <value>
                <fullName>Deal Extended</fullName>
                <isActive>false</isActive>
                <label>Deal Extended</label>
            </value>
            <value>
                <fullName>New Deal</fullName>
                <isActive>false</isActive>
                <label>New Deal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>