force-app/main/default/objects/Contract__c/fields/Group_Travel_Offer__c.field-meta.xml
<CustomField>
    <fullName>Group_Travel_Offer__c</fullName>
    <inlineHelpText>(DO NOT USE) This is no longer offered.</inlineHelpText>
    <label>Group Travel Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>