force-app/main/default/objects/Contract__c/fields/Includes_R_KMLVS__c.field-meta.xml
<CustomField>
    <fullName>Includes_R_KMLVS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for DealSheet Display CRM-9486.</description>
    <label>Includes R/KMLVS</label>
    <type>Checkbox</type>
</CustomField>